# TC-Prediction

./: .gitignore  README.md  baseline_model.py  data.py  download_ncep_fnl.sh  environment.yml  extract.template.conf  extract_environmental_features.sh  extract_tc_features.sh  plot.py  pyproject.toml  requirements-dev.txt  requirements.txt  split_train_test.py  tf_metrics.py
attention_models/: resnet_att.py
baseline/: baseline_model_v1.py  densenet.py  efficientnet.py  resnet.py  resnetv2.py
data_exploration/: mean_variance.py  observations_before_tc.py
experiments/: focal_loss_grad.py
losses/: mse_binary_loss.py
models/: layers.py  resnet_att.py
network_search/: resnet_hyperband_search.py  resnet_hyperband_search.sbatch  resnet_random_search.py
scripts/: candidate_detection.py  create_labels.py  create_labels_theanh.py  create_labels_theanh_baseline.py  create_labels_v2.py  create_range_labels.py  create_tc_binary_classification_dataset.py  create_tc_binary_classification_dataset_theanh.py  create_tc_binary_classification_ncep.py  create_tfrecord_all_patches_for_tc_binary_classification_ncep.py  create_tfrecord_all_patches_for_tc_binary_classification_theanh.py  create_tfrecord_all_patches_with_pca_for_tc_binary_classification_ncep.py  create_tfrecord_from_ncep.py  create_tfrecord_from_patches_dataset.py  create_tfrecord_from_theanh_RCP.py  download_jtwc_best_track.sh  extract.conf  extract.template.conf  extract_binary_datasets.sh  extract_environment_features_from_ncep.py  extract_environmental_features.sh  extract_environmental_features_without_labels.sh  extract_features_from_theanh_data.py  extract_features_from_theanh_data.sh  extract_features_from_theanh_data_RCP45.sh  extract_features_from_theanh_data_RCP85.sh  extract_features_from_theanh_data_baseline.sh  extract_patches_dataset.py  (+10 more)
(+293 files in other folders)
