[tool.poetry]
name = "tc_formation"
version = "0.1.0"
description = "TC genesis forecast using deep models"
authors = ["Quan Nguyen <qmnguyen@iu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
xarray = "^2023.2.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.1"
tensorflow = "^2.11.0"
tensorflow-addons = "^0.19.0"
basemap = "^1.3.6"
numpy = ">=1.22,<1.24"
scikit-image = "^0.20.0"
tqdm = "^4.64.1"
numpyro = "^0.11.0"
netcdf4 = "^1.6.2"
eccodes = "^1.5.1"
shapely = "^2.0.1"
fiona = "^1.9.1"
matplotlib = ">=1.5,<3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
jupytext = "^1.14.5"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
