[tool.poetry]
name = "tc-formation"
version = "0.1.0"
description = "TC genesis detection using deep models"
authors = ["Quan Nguyen <qmnguyen@iu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tc_formation"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "~2.9.1"
pandas = "^1.5.3"
xarray = "^2023.2.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.1"
basemap = "^1.3.6"
numpy = ">=1.22,<1.24"
scikit-image = "^0.20.0"
tqdm = "^4.64.1"
numpyro = "^0.11.0"
netcdf4 = "^1.6.2"
eccodes = "^1.5.1"
shapely = "^2.0.1"
fiona = "^1.9.1"
matplotlib = ">=1.5,<3.7"
seaborn = "^0.12.2"
ensemble-boxes = "^1.0.9"
arviz = "^0.15.0"
tensorflow-addons = "^0.19.0"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
jupytext = "^1.14.5"
autopep8 = "^2.0.1"
ipywidgets = "^7.2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
